# pointclouds_feature_extractor

./: CMakeLists.txt  run.sh
config/: feature_extractor_config.json  plane_extractor_config.json
data/rs/left/: left_0.pcd  left_1.pcd  left_10.pcd  left_11.pcd  left_12.pcd  left_13.pcd  left_14.pcd  left_15.pcd  left_16.pcd  left_17.pcd  left_18.pcd  left_19.pcd  left_2.pcd  left_20.pcd  left_21.pcd  left_22.pcd  left_23.pcd  left_24.pcd  left_25.pcd  left_26.pcd  left_27.pcd  left_28.pcd  left_29.pcd  left_3.pcd  left_30.pcd  left_31.pcd  left_32.pcd  left_33.pcd  left_34.pcd  left_35.pcd  left_36.pcd  left_37.pcd  left_38.pcd  left_39.pcd  left_4.pcd  left_40.pcd  left_41.pcd  left_42.pcd  left_43.pcd  left_44.pcd  (+45 more)
data/rs/right/: right_0.pcd  right_1.pcd  right_10.pcd  right_11.pcd  right_12.pcd  right_13.pcd  right_14.pcd  right_15.pcd  right_16.pcd  right_17.pcd  right_18.pcd  right_19.pcd  right_2.pcd  right_20.pcd  right_21.pcd  right_22.pcd  right_23.pcd  right_24.pcd  right_25.pcd  right_26.pcd  right_27.pcd  right_28.pcd  right_29.pcd  right_3.pcd  right_30.pcd  right_31.pcd  right_32.pcd  right_33.pcd  right_34.pcd  right_35.pcd  right_36.pcd  right_37.pcd  right_38.pcd  right_39.pcd  right_4.pcd  right_40.pcd  right_41.pcd  right_42.pcd  right_43.pcd  right_44.pcd  (+58 more)
data/static/left/: left_0.pcd  left_1.pcd  left_10.pcd  left_2.pcd  left_3.pcd  left_4.pcd  left_5.pcd  left_6.pcd  left_7.pcd  left_8.pcd  left_9.pcd
data/static/right/: right_0.pcd  (+49 more)
src/: feature_extractor.cpp  feature_extractor.h  main.cpp  plane_extractor.cpp  plane_extractor.h
